<resources>
    <string name="app_name">底部菜单项目实训</string>
    <string name="main_news">消息</string>
    <string name="main_home">首页</string>
    <string name="more">更多</string>
    <string name="main_found">发现</string>
    <string name="main_self">个人</string>
    <string name="user">用户名</string>
    <string name="passw">密码</string>
    <string name="repwd">重复密码</string>
    <string name="user_hint">你的用户名</string>
    <string name="pwd_hint">填写密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
