<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <requestFocus />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="国家/地区"
            android:textColor="#353535"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="中国"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#dbdbdb" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp">

        <EditText
            android:id="@+id/user_edi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:gravity="center|left"
            android:maxLines="1"
            android:hint="@string/user_hint"
            android:textColorHint="#DDDDDD"
            android:textCursorDrawable="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/user_edi"
            android:gravity="center"
            android:layout_marginLeft="24dp"
            android:text="@string/user"
            android:textColor="#353535"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp">

        <EditText
            android:id="@+id/pwd_edi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="100dp"
            android:gravity="center|left"
            android:maxLines="1"
            android:hint="@string/pwd_hint"
            android:textColorHint="#DDDDDD"
            android:textCursorDrawable="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/pwd_edi"
            android:gravity="center"
            android:layout_marginLeft="24dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/passw"/>

    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="16sp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>